# PsychRef

./: .gitignore  README.md  constants.py  gui.py  psychref.py  pyproject.toml
.github/workflows/: exe.yml
src/: gui.py  psychref.py  utils.py
