[project]
name = "psychref"
version = "0.1.0"
description = "A tool for processing psychological referrals and generating PDFs for the referral source"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "customtkinter>=5.2.2",
    "fpdf>=1.7.2",
    "pandas>=2.2.3",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.10.0",
]
